--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -7,7 +7,7 @@ custom-foot: js/carousel-js.html
   <div class="col-md-12">
 
   {% include index/description.html %}
-  {% include feature/timelinejs.html %}
+  {% include index/carousel.html %}
   
   </div>
   <div class="col-md-6">  
