--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -2,3 +2,9 @@
     Put your custom SCSS here! 
     This allows you to override any CollectionBuilder or Bootstrap CSS without modifying the base theme files directly.
 */
+p{color:olivedrab}
+h1{color:chartreuse}
+h2{color:deeppink}
+h3{color:darkviolet}
+h4{color:teal}
+::-moz-list-bullet {color:salmon}
