got list colors

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -7,4 +7,5 @@ h1{color:chartreuse}
 h2{color:deeppink}
 h3{color:darkviolet}
 h4{color:teal}
-::-moz-list-bullet {color:salmon}
+ol{color:rgb(161, 66, 56)}
+ul{color:darkorange}
